HybridSearch_example/kubernetes/nrp-dev/weaviate-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weaviate
spec:
  template:
    spec:
      containers:
      - name: weaviate
        volumeMounts:
        - name: dev-weaviate-pvc
          mountPath: /app/active
      volumes:
      - name: dev-weaviate-pvc
        persistentVolumeClaim:
          claimName: dev-weaviate-pvc
