HybridSearch_example/kubernetes/nrp-dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: dev-sage-hybrid-search.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gradio-ui
            port:
              number: 7860
  tls:
  - hosts:
    - dev-sage-hybrid-search.nrp-nautilus.io
